@@ -1,3 +1,7 @@
+* theme: new theme settings panel.margin.x and panel.margin.y (units) allow
+  specifying horizontal and vertical gap between panels in facetted plots (for
+  both grid and wrap).  (Fixes #839)
+
 ggplot2 0.9.3.1
 ----------------------------------------------------------------
 
